crates/analyzer/tests/snapshots/errors__call_builtin_object.snap
---
source: crates/analyzer/tests/errors.rs
expression: "error_string(&path, test_files::fixture(path))"

---
error: cannot find value `block` in this scope
  ┌─ compile_errors/call_builtin_object.fe:4:5
  │
4 │     block.foo()
  │     ^^^^^ undefined


